# JenkinsDemo

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  TestCode.cpp  cmake_install.cmake  unit_test
CRC_UT/: CMakeLists.txt
CRC_UT/googletest-main/: CTestTestfile.cmake  Makefile  cmake_install.cmake
CRC_UT/googletest-main/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
CRC_UT/googletest-main/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
CRC_UT/inc/: Code.h
CRC_UT/src/: Code.cpp
CRC_UT/test/IT/: IT.cpp
CRC_UT/test/UT/: UT.cpp
Test/CRC_UT/googletest-main/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Test/CRC_UT/googletest-main/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Test/CRC_UT/googletest-main/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
